# ogc-app-package-patterns-tester

./: .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: docs.yml  tests.yml
api/: index.html
config/: server_config.json
contributing/: index.html
data/patterns/: pattern-1.json  pattern-10.json  pattern-11.json  pattern-12.json  pattern-3.json  pattern-5.json  pattern-6.json  pattern-7.json  pattern-8.json  pattern-9.json
docs/: api.md  contributing.md  index.md  installation.md  usage.md
examples/: example_usage.py  notebook_parser_example.py
installation/: index.html
search/: search_index.json
src/ogc_patterns_tester/: __init__.py  __main__.py  cli.py  client.py  models.py  notebook_parser.py  patterns_manager.py  utils.py
tests/: __init__.py  conftest.py  test_client.py  test_integration.py  test_models.py  test_notebook_parser.py  test_patterns_manager.py  test_patterns_tester.py
usage/: index.html
